--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.0.96",
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
