--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "axios": "^1.1.3",
+    "axios-jsonp": "^1.0.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
