--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0"
   },
