--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.6.5",
+    "v-scroll-lock": "^1.3.1",
     "vue": "^2.6.11",
     "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
