--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.6.0",
+    "vuetify": "^2.6",
+    "vuetify-loader": "^1.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -32,7 +33,6 @@
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "^2.6.11"
   }
 }
